Revise troubleshooting instructions for Druid cluster
Updated troubleshooting steps and commands for Druid cluster issues, including SSL and PostgreSQL connectivity checks.